Fix footer-content collision on narrow screens

--- a/app/resources/style/home.less
+++ b/app/resources/style/home.less
@@ -345,6 +345,13 @@ h4 {
     .content {
         margin-left: 3em;
         margin-right: 3em;
+        padding-bottom: 10em;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .content {
+        padding-bottom: 15em;
     }
 }
 
